Fix readability of grey color

--- a/client-simple/src/styles/_variables.scss
+++ b/client-simple/src/styles/_variables.scss
@@ -5,7 +5,7 @@ $color-whiteblue: #f5f8fc;
 $color-whiteblue-dark: #eef4f8;
 $color-whiteblue-dark2: #b6cce9;
 $color-grey: #5a5a5a;
-$color-grey-light: #cac7c7;
+$color-grey-light: #e2dcdc;
 $color-grey-light2: #d6d6d6;
 
 $color-blue: rgb(85, 191, 223);
